--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "mysql2": "^3.6.1",
-    "next": "latest",
+    "next": "13.5.3",
     "react": "latest",
     "react-dom": "latest",
     "react-hot-toast": "^2.4.1"
