--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.5.3",
     "react": "latest",
     "react-dom": "latest",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
