--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-feather": "^2.0.10",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "latest",
