--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "services:up": "powershell.exe -ExecutionPolicy Bypass -File ./start-services.ps1", 
     "dev": "next dev",
+    "db:dev:up": "npm run services:up && npm run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
