--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "next": "13.5.3",
     "npm": "^10.2.5",
