--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "next": "13.5.3",
